deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scry
  labels:
    app.kubernetes.io/name: scry
