deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scry
  namespace: scry
  labels:
    app.kubernetes.io/name: scry
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7777
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: scry
